# Clipper2

CPP/BenchMark/: GetIntersectPtBenchmark.cpp  PointInPolygonBenchmark.cpp  StripDuplicateBenchmark.cpp
CPP/Clipper2Lib/: CMakeLists.txt
CPP/Clipper2Lib/include/clipper2/: clipper.core.h  clipper.engine.h  clipper.export.h  clipper.h  clipper.minkowski.h  clipper.offset.h  (+3 more)
CPP/Clipper2Lib/src/: clipper.engine.cpp  clipper.offset.cpp  clipper.rectclip.cpp  clipper.triangulation.cpp
CPP/Examples/Benchmarks/: Benchmarks.cpp
CPP/Examples/Inflate/: Inflate.cpp
CPP/Examples/MemLeakTest/: MemLeakTest.cpp
CPP/Examples/PolygonSamples/: PolygonSamples.cpp
CPP/Examples/RandomClipping/: RandomClipping.cpp
CPP/Examples/RectClipping/: RectClipping.cpp
CPP/Examples/SimpleClipping/: SimpleClipping.cpp
CPP/Examples/Triangulation/: Triangulation.cpp
CPP/Examples/UnionClipping/: UnionClipping.cpp
CPP/Examples/UsingZ/: UsingZ.cpp
CPP/Examples/VariableOffset/: VariableOffset.cpp
CPP/Tests/: TestExportHeaders.cpp  TestIsCollinear.cpp  TestLines.cpp  TestOffsetOrientation.cpp  TestOffsets.cpp  TestOrientation.cpp  TestPolygons.cpp  TestPolytreeHoles.cpp  TestPolytreeIntersection.cpp  TestPolytreeUnion.cpp  TestRandomPaths.cpp  TestRect.cpp  TestRectClip.cpp  TestSimplifyPath.cpp  TestTrimCollinear.cpp  TestWindows.cpp
CPP/Utils/: ClipFileLoad.cpp  ClipFileLoad.h  ClipFileSave.cpp  ClipFileSave.h  Colors.h  CommonUtils.h  Timer.h  clipper.svg.cpp  clipper.svg.h  clipper.svg.utils.h
debug/: .clangd  CMakeLists.txt  a.out  grow.cpp  main.cpp  plot.html  plot.py
